fix: 당첨 로또 번호 입력 예외 수정